Fixed crash, forgot to check for a NULL pointer.

BUG: 134054


svn path=/trunk/extragear/network/ktorrent/; revision=584383